--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Layanan Akun Exchange Terpercaya - IkySyptraa</title>
     <meta name="description" content="Menyediakan berbagai jenis akun exchange premium terpercaya: BITGET, BYBIT, BINANCE. Proses cepat, aman, dan berkualitas.">
-    <meta name="keywords" content="akun exchange, bitget, bybit, binance, trading, investasi, ikysyptraa">
+    <meta name="keywords" content="akun exchange, bitget, bybit, binance, trading, investasi, ikysyptraa, airdrop, event crypto, verifikasi akun">
     <meta name="author" content="IkySyptraa">
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="icon" href="assets/images/favicon.ico" type="image/x-icon">
@@ -14,7 +14,7 @@
     <header class="hero">
         <div class="hero-content">
             <h1>IkySyptraa - Solusi Akun Exchange Terpercaya Anda</h1>
-            <p>Menyediakan akses premium ke berbagai platform trading terkemuka.</p>
+            <p>Maksimalkan peluang Anda di dunia crypto dengan akun yang siap pakai.</p>
             <a href="https://t.me/IkySyptraa" target="_blank" class="button">Hubungi Saya di Telegram</a>
         </div>
     </header>
@@ -22,19 +22,25 @@
     <main class="container">
         <section class="about-me">
             <h2>Tentang Saya</h2>
-            <p>Saya <strong>IkySyptraa</strong>, seorang penyedia layanan akun exchange yang berfokus pada keamanan, kecepatan, dan kualitas. Tujuan saya adalah mempermudah Anda mengakses platform trading global dengan akun yang terpercaya.</p>
+            <p>Saya <strong>IkySyptraa</strong>, penyedia layanan akun exchange terpercaya yang membantu Anda dalam diversifikasi akses ke berbagai platform crypto. Kami berfokus pada keamanan, kecepatan, dan kualitas untuk setiap akun yang Anda butuhkan.</p>
             <p>Terhubung langsung dengan saya melalui Telegram: <a href="https://t.me/IkySyptraa" target="_blank">https://t.me/IkySyptraa</a></p>
         </section>
 
         <section class="services">
-            <h2>Layanan Kami</h2>
-            <p>Kami menyediakan beragam <strong>akun exchange premium</strong> untuk berbagai platform populer, meliputi:</p>
+            <h2>Layanan Kami: Akun Exchange Premium</h2>
+            <p>Butuh banyak akun crypto untuk berbagai keperluan, termasuk partisipasi airdrop atau optimasi event? Kami hadir sebagai solusi! Kami menyediakan layanan verifikasi akun crypto untuk platform terkemuka seperti:</p>
             <ul>
                 <li><strong>BITGET</strong></li>
                 <li><strong>BYBIT</strong></li>
                 <li><strong>BINANCE</strong></li>
+                <li><strong>FLIPSTER</strong></li>
+                <li><strong>MEXC</strong></li>
+                <li><strong>GATE.IO</strong></li>
+                <li><strong>KUCOIN</strong></li>
+                <li>Dan platform lainnya sesuai permintaan.</li>
             </ul>
-            <p>Setiap akun yang kami sediakan terjamin kualitasnya dan siap digunakan untuk aktivitas trading Anda.</p>
+            <p>Kami menjamin setiap akun terverifikasi dan siap digunakan. Dapatkan fleksibilitas yang Anda butuhkan untuk setiap aktivitas crypto Anda!</p>
+            <p><strong>Garansi Kami:</strong> Kami memberikan garansi apabila IP terdeteksi dan Anda tidak bisa bergabung event airdrop dalam batas waktu yang ditentukan. Kepuasan Anda adalah jaminan kami.</p>
         </section>
 
         <section class="purchase-info">
@@ -46,9 +52,8 @@
 
         <section class="feedback">
             <h2>Testimoni Pengguna</h2>
-            <p>Lihat pengalaman dan ulasan dari pengguna lain yang telah mempercayai layanan kami.</p>
+            <p>Lihat pengalaman dan ulasan dari pengguna lain yang telah mempercayai layanan kami. Kepercayaan Anda adalah prioritas utama kami.</p>
             <p><a href="https://t.me/+jX-ShwPNMa4yMTA1" target="_blank">Lihat Testimoni Pelanggan</a></p>
-            <p>Kepercayaan Anda adalah prioritas utama kami.</p>
         </section>
     </main>
 
